# rust-axum-sqlx-sample

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  openapi.yaml
local/: docker-compose.yml
local/api/: Dockerfile
local/db/: Dockerfile
local/scripts/: clear_permission  exec_init_db  init_db  migrate
migrations/: 20220121053505_users.up.sql  20220121060109_categories.down.sql  20220121060109_categories.up.sql  20220121060224_posts.up.sql
openapi/: base.yaml  bundle  openapi.yaml
openapi/paths/categories/: add.yaml  index.yaml
openapi/paths/posts/: add.yaml  index.yaml
openapi/paths/users/: add.yaml  index.yaml  view.yaml
openapi/paths/users/edit/image/: profile.yaml
openapi/paths/users/edit/img/: profile.yaml
openapi/schemas/: category.yaml  index.yaml  post.yaml  user.yaml
src/: main.rs
src/bootstrap/: mod.rs
src/controllers/: categories.rs  mod.rs  posts.rs  users.rs
src/db/: category.rs  mod.rs  post.rs  user.rs
src/db/postgres/: mod.rs
src/error/: mod.rs
src/models/: category.rs  post.rs  user.rs
src/repositories/: category.rs  mod.rs  post.rs  user.rs
src/router/: mod.rs
src/services/: img_upload.rs  mod.rs
src/test/: mod.rs
src/test/fixture/: category.rs  post.rs  user.rs
src/tests/fixture/: category.rs  mod.rs  post.rs  user.rs
src/tests/repositories/: mod.rs
src/usecases/: mod.rs  users.rs
