[package]
name = "rust-axum-sqlx-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ]}
dotenv = "0.15"
mockall = "0.11"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mockall_double = "0.2"